[gd_scene load_steps=3 format=3 uid="uid://cm2rftdr6i3u8"]

[ext_resource type="Script" path="res://inventoty/inventory_slot.gd" id="1_w60wd"]

[sub_resource type="LabelSettings" id="LabelSettings_cyoyo"]
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w60wd")

[node name="ItemIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 5

[node name="CountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
label_settings = SubResource("LabelSettings_cyoyo")
horizontal_alignment = 2
vertical_alignment = 2
